completed header and section one

--- a/index.html
+++ b/index.html
@@ -4,17 +4,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
+        <p class="logo">_incredible</p>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
         </ul>
     </nav>
-    <header></header>
-    <section></section>
+    <header>
+        <div>
+            <h1>Welcome to something truly incredible...</h1>
+            <p>The home of incredible things on the internet that help us to be truly incredible.</p>
+        </div>
+    </header>
+    <section>
+        <div class="card">
+            <img src="https://www.fillmurray.com/200/250" alt="">
+            <p>Is it a bird?</p>
+        </div>
+        <div class="card">
+            <img src="https://www.fillmurray.com/200/250" alt="">
+            <p>Is it a plane?!</p>
+        </div>
+        <div class="card">
+            <img src="https://www.fillmurray.com/200/250" alt="">
+            <p>No but my CEO retired so I'm quids in!</p>
+        </div>
+    </section>
     <section></section>
     <footer></footer>
 </body>
