--- a/index.html
+++ b/index.html
@@ -22,20 +22,31 @@
         </div>
     </header>
     <section>
-        <div class="card">
-            <img src="https://www.fillmurray.com/200/250" alt="">
+        <div class="card shadow">
+            <img src="https://www.fillmurray.com/200/250" alt="Just Bill Murray again">
             <p>Is it a bird?</p>
         </div>
-        <div class="card">
-            <img src="https://www.fillmurray.com/200/250" alt="">
+        <div class="card shadow">
+            <img src="https://www.fillmurray.com/200/250" alt="Just Bill Murray again">
             <p>Is it a plane?!</p>
         </div>
-        <div class="card">
-            <img src="https://www.fillmurray.com/200/250" alt="">
+        <div class="card shadow">
+            <img src="https://www.fillmurray.com/200/250" alt="Just Bill Murray again">
             <p>No but my CEO retired so I'm quids in!</p>
         </div>
     </section>
-    <section></section>
-    <footer></footer>
+    <section>
+        <div class="item">
+            <img class="shadow" src="https://www.fillmurray.com/300/300" alt="Just Bill Murray again">
+            <p class="shadow">I'm Slim Shady, yes, I'm the real Shady. All you other Slim Shadys are just imitating. So won't the real Slim Shady please stand up. Please stand up, please stand up?. 'Cause I'm Slim Shady, yes, I'm the real Shady. All you other Slim Shadys are just imitating. So won't the real Slim Shady please stand up. Please stand up, please stand up?</p>
+        </div>
+        <div class="item reverse">
+            <img class="shadow" src="https://www.fillmurray.com/300/300" alt="Just Bill Murray again">
+            <p class="shadow">I never meant to give you mushrooms, girl. I never meant to bring you to my world. Now you sitting in the corner crying. And now it's my fault, my fault. I never meant to give you mushrooms, girl. I never meant to bring you to my world. Now you sitting in the corner crying. And now it's my fault, my fault.</p>
+        </div>
+    </section>
+    <footer>
+        <p>&copy; Ollie Holden</p>
+    </footer>
 </body>
 </html>
